# pythonPackage

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE
docs/: Makefile
pycount_dus/: README.md  pyproject.toml
pycount_dus/docs/: conf.py  example.ipynb  make.bat
pycount_dus/src/pycount_dus/: __init__.py  pycount_dus.py
pycount_dus/tests/: test_pycount_dus.py
src/pycount_dus/: __init__.py
tests/: test_pycount_dus.py
