[tool.poetry]
name = "pycount_dus"
version = "0.1.0"
description = "A package to calculate word counts from a text file"
authors = ["Luiz Dustin Eduardo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
